deployments/simple-deployment/overlays/v3/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: delayed-server
spec:
    host: svc-echo-server-v3
    subsets:
    - name: v3
      labels:
        version: v3
