deployments/simple-deployment/overlays/v3/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: delayed-service-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
    - default-gateway
  http:
  - match:
    - uri:
        prefix: "/delay"
      ignoreUriCase: true
    fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 100
    headers:
      request:
          add:
              Fault: "DELAY"
    route:
    - destination:
        host: svc-echo-server-v3 # service name!
        subset: v3
